added languages default/sv and played around w/ constraints

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
 
     <TextView
         android:id="@+id/convertTxt"
-        android:layout_width="382dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:text="Convert"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/tConvert"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,15 +24,16 @@
         android:id="@+id/firstCurrency"
         android:layout_width="135dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="394dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:textSize="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/currencySpin"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/convertTxt" />
 
@@ -38,41 +41,43 @@
         android:id="@+id/currencySpin"
         android:layout_width="98dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginStart="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/firstCurrency"
-        app:layout_constraintTop_toBottomOf="@+id/convertTxt" />
+        app:layout_constraintTop_toTopOf="@+id/firstCurrency" />
 
     <TextView
         android:id="@+id/toTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="To"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:text="@string/tTo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstCurrency" />
 
     <Spinner
         android:id="@+id/currencySpin2"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginStart="142dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toTxt" />
 
     <Button
         android:id="@+id/convertBtn"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:text="Convert"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        android:text="@string/tConvert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultCurrency" />
@@ -80,8 +85,10 @@
     <TextView
         android:id="@+id/resultCurrency"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:text="0"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
