--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:text="@string/tConvert"
         android:textAlignment="center"
         android:textSize="20sp"
@@ -41,6 +41,7 @@
         android:id="@+id/currencySpin"
         android:layout_width="98dp"
         android:layout_height="60dp"
+        android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/firstCurrency"
@@ -61,22 +62,23 @@
 
     <Spinner
         android:id="@+id/currencySpin2"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_width="98dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
+        android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toTxt" />
 
     <Button
         android:id="@+id/convertBtn"
-        android:layout_width="200dp"
-        android:layout_height="0dp"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="32dp"
         android:text="@string/tConvert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
